--- a/index.html
+++ b/index.html
@@ -8,45 +8,50 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>CALCULATOR</h2>
+    <div class="outer">
     <main class="container-element">
+        <div class="container-element-textarea">
         <textarea></textarea>
-        <div>
-            <div>
-            <input type="button" value="C">
-            <input type="button" value="%">
-            <input type="button" value="⌫">
-            <input type="button" value="÷">
-             </div>
-
-             <div>
-            <input type="button" value="1">
-            <input type="button" value="2">
-            <input type="button" value="3">
-            <input type="button" value="*">
-             </div>
-
-             <div>
-                <input type="button" value="4">
-                <input type="button" value="5">
-                <input type="button" value="6">
-                <input type="button" value="-">
-            </div>
-
-            <div>
-                <input type="button" value="7">
-                <input type="button" value="8">
-                <input type="button" value="9">
-                <input type="button" value="+">
-
-            </div>
-
-            <div>
-                <input type="button" value=".">
-                <input type="button" value="0">
-                <input type="button" value="00">
-                <input type="button" value="=">
-            </div>
         </div>
+      <div class="container-element2">
+           <!--  <div class="container-element-row1"> -->
+            <input type="button" value="C" class="color-buttons">
+            <input type="button" value="%" class="color-buttons">
+            <input type="button" value="⌫" class="color-buttons">
+            <input type="button" value="÷" class="color-buttons">
+             <!-- </div>
+ -->
+             <!-- <div class="container-element-row2"> -->
+            <input type="button" value="1" class="other-buttons">
+            <input type="button" value="2" class="other-buttons">
+            <input type="button" value="3" class="other-buttons">
+            <input type="button" value="*" class="color-buttons">
+             <!-- </div> -->
+
+            <!--  <div class="container-element-row3"> -->
+                <input type="button" value="4" class="other-buttons">
+                <input type="button" value="5" class="other-buttons">
+                <input type="button" value="6" class="other-buttons">
+                <input type="button" value="-" class="color-buttons">
+            <!-- </div> -->
+
+           <!--  <div class="container-element-row4"> -->
+                <input type="button" value="7" class="other-buttons">
+                <input type="button" value="8" class="other-buttons">
+                <input type="button" value="9" class="other-buttons">
+                <input type="button" value="+" class="color-buttons">
+
+           <!--  </div> -->
+
+          <!--   <div class="container-element-row5"> -->
+                <input type="button" value="." class="other-buttons">
+                <input type="button" value="0" class="other-buttons">
+                <input type="button" value="00" class="other-buttons">
+                <input type="button" value="=" class="color-buttons">
+            <!-- </div> -->
+       </div> 
     </main>
+    </div>
 </body>
 </html>
