--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="errorDisplay-div" style="background-color: red; width:30%;padding:8px; margin:auto;display: none;">Invalid Input</p>
+    <p class="errorDisplay-div">Invalid Input</p>
     <h2>CALCULATOR</h2>
     
     <div class="container">
